# GenChemCoding_package

./: Notebook2_Module.py  Notebook3_Module.py  Notebook4_Module.py  Notebook5_Module.py  ReadMe.md  __init__.py  pyproject.toml
GenChemCoding_package.egg-info/: PKG-INFO  top_level.txt
